k8s/nodeapp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp1
  labels:
    app: nodeapp1
    service: nodeapp1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: node-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp1-v1
  labels:
    app: nodeapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp1
  template:
    metadata:
      labels:
        app: nodeapp1
    spec:
      containers:
      - name: nodeapp1
        image: gcr.io/sandbox-312412/nodeapp1:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: gcr-key
