k8s/nodeapp1_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp1
  labels:
    app: nodeapp1
    service: nodeapp1
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 9000
  selector:
    app: nodeapp1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp1-v2
  labels:
    app: nodeapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp1
  template:
    metadata:
      labels:
        app: nodeapp1
    spec:
      containers:
      - name: nodeapp1
        image: gcr.io/anthos-demo-335406/nodeapp1:v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 9000
      imagePullSecrets:
        - name: gcr-key
