k8s/nodeapp2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp2
  labels:
    app: nodeapp2
    service: nodeapp2
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 9000
  selector:
    app: nodeapp2
