k8s/nodeapp3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp3
  labels:
    app: nodeapp3
    service: nodeapp3
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 9000
  - port: 443
    name: https
    protocol: TCP
    targetPort: 9000
  selector:
    app: nodeapp3
