k8s/nodeapp4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp4
  labels:
    app: nodeapp4
    service: nodeapp4
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 9000
  - port: 443
    name: https
    protocol: TCP
    targetPort: 9000
  selector:
    app: nodeapp4
