k8s/nodeapp5-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp5
  labels:
    app: nodeapp5
    service: nodeapp5
    topology.istio.io/network: sandbox-312412-vpc-2
spec:
  ports:
  - port: 80
    name: http
    targetPort: 9000
  - port: 443
    name: https
    targetPort: 9000
  selector:
    app: nodeapp5
